# rf-community-cores

./: .gitlab-ci.yml  CMakeLists.txt  README.md  buildspec.yml
docker/: README.md
docker/vivado-2017.4/: Dockerfile  Xilinx.lic  install_config.txt
fpga-rfnoc/dsp-utils/: Makefile.inc
gr-rfcc/: CMakeLists.txt  README.md
gr-rfcc/grc/: rfcc_block_tree.xml  rfcc_rfnoc_ducddc.xml
uhd-rfcc/: CMakeLists.txt
uhd-rfcc/include/rfcc/: CMakeLists.txt
uhd-rfcc/lib/: CMakeLists.txt  ducddc_block_ctrl_impl.cpp
